2010-03-16  Thomas Moulard  <thomas.moulard@gmail.com>

	Clean code.
	* idl/Makefile.am: Clean.
	* idl/hpp/corbaserver/Makefile.am: Clean.
	* idl/hpp/corbaserver/common.idl: Rename from idl/hpp/corbaserver/server.idl.
	* idl/hpp/corbaserver/obstacle.idl,
	* idl/hpp/corbaserver/problem.idl,
	* idl/hpp/corbaserver/robot.idl: Fix includes.
	* include/Makefile.am: Add new header.
	* include/hpp/corbaserver/fwd.hh: New.
	* include/hpp/corbaserver/server.hh: Clean.
	* src/Makefile.am: Fix paths.
	* src/hpp-corbaserver.cc,
	* src/obstacle.impl.cc,
	* src/obstacle.impl.hh,
	* src/problem.impl.cc,
	* src/problem.impl.hh,
	* src/robot.impl.cc,
	* src/robot.impl.hh,
	* src/server-private.cc,
	* src/server-private.hh,
	* src/server.cc,
	* src/tools.cc,
	* src/tools.hh: Reorganize.

2010-03-16  Thomas Moulard  <thomas.moulard@gmail.com>

	Clean project.
	* .gitignore: Update.
	* .gitmodules: New.
	* Makefile.am: Factorize rules.
	* bootstrap: Add mechanism for roboptim alias check.
	* build-aux/bootstrap: Remove.
	* build-aux/config.guess: Remove.
	* build-aux/config.sub: Remove.
	* build-aux/depcomp: Remove.
	* build-aux/doxygen.m4: Remove.
	* build-aux/init.mk: Remove.
	* build-aux/install-sh: Remove.
	* build-aux/kineo.mk: Remove.
	* build-aux/libtool.m4: Remove.
	* build-aux/ltmain.sh: Remove.
	* build-aux/ltoptions.m4: Remove.
	* build-aux/ltsugar.m4: Remove.
	* build-aux/ltversion.m4: Remove.
	* build-aux/lt~obsolete.m4: Remove.
	* build-aux/missing: Remove.
	* build-aux/move-if-change: Remove.
	* build-aux/pkg-config.mk: Remove.
	* build-aux/pkg-config.pc.in: Remove.
	* build-aux/warning.m4: Remove.
	* build-aux: New.
	* configure.ac: Clean.
	* deps.ac: Remove.
	* doc/Makefile.am: Factorize.
	* idl/Makefile.am: New.
	* idl/hpp/corbaserver/Makefile.am: New.
	* idl/hpp/corbaserver/obstacle.idl: New.
	* idl/hpp/corbaserver/problem.idl: Rename from idl/server/hppciProblemServer.idl.
	* idl/hpp/corbaserver/robot.idl: Rename from idl/server/hppciRobotServer.idl.in.